agora-kubernetes-components/kustomization/base/services/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: city-services
  labels:
    app.kubernetes.io/name: api-gateway
spec:
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
  type: ClusterIP
