agora-kubernetes-components/kustomization/base/services/api-gateway/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-specific
  namespace: city-services
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 8080
          protocol: TCP
        - port: 8443
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traffic-optimizer
      ports:
        - port: 8080
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: energy-management
      ports:
        - port: 8080
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: data-broker
      ports:
        - port: 8080
          protocol: TCP
